AM_CXXFLAGS = \
	@NO_VARIADIC_MACROS@ \
	@NO_COVERED_SWITCH_DEFAULT@ \
	@NO_C99_EXTENSIONS@

BUILT_SOURCES = Script/ScriptParser.cc
AM_YFLAGS = -d
AM_LFLAGS = -olex.yy.c

SOURCE = ADT/StringEntry.cpp \
	Core/AttributeOption.cpp \
	Core/Environment.cpp \
	Core/GeneralOptions.cpp \
	Core/InputTree.cpp \
	Core/IRBuilder.cpp \
	Core/LinkerConfig.cpp \
	Core/Linker.cpp \
	Core/LinkerScript.cpp \
	Core/Module.cpp \
	Core/TargetOptions.cpp \
	Fragment/AlignFragment.cpp \
	Fragment/FillFragment.cpp \
	Fragment/Fragment.cpp \
	Fragment/FragmentRef.cpp \
	Fragment/NullFragment.cpp \
	Fragment/RegionFragment.cpp \
	Fragment/Relocation.cpp \
	Fragment/Stub.cpp \
	LD/Archive.cpp \
	LD/ArchiveReader.cpp \
	LD/BinaryReader.cpp \
	LD/BranchIsland.cpp \
	LD/BranchIslandFactory.cpp \
	LD/BSDArchiveReader.cpp \
	LD/DebugString.cpp \
	LD/Diagnostic.cpp \
	LD/DiagnosticEngine.cpp \
	LD/DiagnosticInfos.cpp \
	LD/DiagnosticLineInfo.cpp \
	LD/DiagnosticPrinter.cpp \
	LD/DWARFLineInfo.cpp \
	LD/DynObjReader.cpp \
	LD/EhFrame.cpp \
	LD/EhFrameHdr.cpp \
	LD/EhFrameReader.cpp \
	LD/ELFBinaryReader.cpp \
	LD/ELFDynObjFileFormat.cpp \
	LD/ELFDynObjReader.cpp \
	LD/ELFExecFileFormat.cpp \
	LD/ELFFileFormat.cpp \
	LD/ELFObjectReader.cpp \
	LD/ELFObjectWriter.cpp \
	LD/ELFReader.cpp \
	LD/ELFReaderIf.cpp \
	LD/ELFSegment.cpp \
	LD/ELFSegmentFactory.cpp \
	LD/GarbageCollection.cpp \
	LD/GNUArchiveReader.cpp \
	LD/GroupReader.cpp \
	LD/IdenticalCodeFolding.cpp \
	LD/LDContext.cpp \
	LD/LDFileFormat.cpp \
	LD/LDReader.cpp \
	LD/LDSection.cpp \
	LD/LDSymbol.cpp \
	LD/MergedStringTable.cpp \
	LD/MsgHandler.cpp \
	LD/NamePool.cpp \
	LD/ObjectWriter.cpp \
	LD/RelocationFactory.cpp \
	LD/Relocator.cpp \
	LD/RelocData.cpp \
	LD/ResolveInfo.cpp \
	LD/Resolver.cpp \
	LD/SectionData.cpp \
	LD/SectionSymbolSet.cpp \
	LD/StaticResolver.cpp \
	LD/StubFactory.cpp \
	LD/TextDiagnosticPrinter.cpp \
	MC/Attribute.cpp \
	MC/AttributeSet.cpp \
	MC/CommandAction.cpp \
	MC/ContextFactory.cpp \
	MC/FileAction.cpp \
	MC/InputAction.cpp \
	MC/InputBuilder.cpp \
	MC/Input.cpp \
	MC/InputFactory.cpp \
	MC/MCLDDirectory.cpp \
	MC/SearchDirs.cpp \
	MC/SymbolCategory.cpp \
	MC/ZOption.cpp \
	Object/ObjectBuilder.cpp \
	Object/ObjectLinker.cpp \
	Object/SectionMap.cpp \
	Script/AssertCmd.cpp \
	Script/Assignment.cpp \
	Script/BinaryOp.cpp \
	Script/EntryCmd.cpp \
	Script/FileToken.cpp \
	Script/GroupCmd.cpp \
	Script/InputCmd.cpp \
	Script/InputSectDesc.cpp \
	Script/InputToken.cpp \
	Script/NameSpec.cpp \
	Script/NullaryOp.cpp \
	Script/Operand.cpp \
	Script/Operator.cpp \
	Script/OutputArchCmd.cpp \
	Script/OutputCmd.cpp \
	Script/OutputFormatCmd.cpp \
	Script/OutputSectDesc.cpp \
	Script/RpnEvaluator.cpp \
	Script/RpnExpr.cpp \
	Script/ScriptCommand.cpp \
	Script/ScriptFile.cpp \
	Script/ScriptParser.yy \
	Script/ScriptReader.cpp \
	Script/ScriptScanner.ll \
	Script/SearchDirCmd.cpp \
	Script/SectionsCmd.cpp \
	Script/StringList.cpp \
	Script/StrToken.cpp \
	Script/TernaryOp.cpp \
	Script/UnaryOp.cpp \
	Script/WildcardPattern.cpp \
	Support/CommandLine.cpp \
	Support/Demangle.cpp \
	Support/Directory.cpp \
	Support/FileHandle.cpp \
	Support/FileOutputBuffer.cpp \
	Support/FileSystem.cpp \
	Support/LEB128.cpp \
	Support/MemoryArea.cpp \
	Support/MemoryAreaFactory.cpp \
	Support/MsgHandling.cpp \
	Support/Path.cpp \
	Support/raw_ostream.cpp \
	Support/RealPath.cpp \
	Support/SystemUtils.cpp \
	Support/Target.cpp \
	Support/TargetRegistry.cpp \
	Support/Unix \
	Support/Unix/FileSystem.inc \
	Support/Unix/PathV3.inc \
	Support/Unix/System.inc \
	Support/Windows \
	Support/Windows/FileSystem.inc \
	Support/Windows/PathV3.inc \
	Support/Windows/System.inc \
	Target/ELFAttribute.cpp \
	Target/ELFAttributeData.cpp \
	Target/ELFAttributeValue.cpp \
	Target/ELFDynamic.cpp \
	Target/ELFEmulation.cpp \
	Target/GNUInfo.cpp \
	Target/GNULDBackend.cpp \
	Target/GOT.cpp \
	Target/OutputRelocSection.cpp \
	Target/PLT.cpp \
	Target/TargetLDBackend.cpp \
	Target/AArch64/AArch64Diagnostic.cpp \
	Target/AArch64/AArch64ELFDynamic.cpp \
	Target/AArch64/AArch64ELFDynamic.h \
	Target/AArch64/AArch64Emulation.cpp \
	Target/AArch64/AArch64GNUInfo.h \
	Target/AArch64/AArch64GOT.cpp \
	Target/AArch64/AArch64GOT.h \
	Target/AArch64/AArch64.h \
	Target/AArch64/AArch64LDBackend.cpp \
	Target/AArch64/AArch64LDBackend.h \
	Target/AArch64/AArch64PLT.cpp \
	Target/AArch64/AArch64PLT.h \
	Target/AArch64/AArch64RelocationFunctions.h \
	Target/AArch64/AArch64RelocationHelpers.h \
	Target/AArch64/AArch64Relocator.cpp \
	Target/AArch64/AArch64Relocator.h \
	Target/AArch64/TargetInfo/AArch64TargetInfo.cpp \
	Target/ARM/ARMDiagnostic.cpp \
	Target/ARM/ARMELFAttributeData.cpp \
	Target/ARM/ARMELFAttributeData.h \
	Target/ARM/ARMELFDynamic.cpp \
	Target/ARM/ARMELFDynamic.h \
	Target/ARM/ARMEmulation.cpp \
	Target/ARM/ARMGNUInfo.h \
	Target/ARM/ARMGOT.cpp \
	Target/ARM/ARMGOT.h \
	Target/ARM/ARM.h \
	Target/ARM/ARMLDBackend.cpp \
	Target/ARM/ARMLDBackend.h \
	Target/ARM/ARMPLT.cpp \
	Target/ARM/ARMPLT.h \
	Target/ARM/ARMRelocationFunctions.h \
	Target/ARM/ARMRelocator.cpp \
	Target/ARM/ARMRelocator.h \
	Target/ARM/ARMToARMStub.cpp \
	Target/ARM/ARMToARMStub.h \
	Target/ARM/ARMToTHMStub.cpp \
	Target/ARM/ARMToTHMStub.h \
	Target/ARM/TargetInfo/ARMTargetInfo.cpp \
	Target/ARM/THMToARMStub.cpp \
	Target/ARM/THMToARMStub.h \
	Target/ARM/THMToTHMStub.cpp \
	Target/ARM/THMToTHMStub.h \
	Target/Hexagon/HexagonAbsoluteStub.cpp \
	Target/Hexagon/HexagonAbsoluteStub.h \
	Target/Hexagon/HexagonDiagnostic.cpp \
	Target/Hexagon/HexagonELFDynamic.cpp \
	Target/Hexagon/HexagonELFDynamic.h \
	Target/Hexagon/HexagonEmulation.cpp \
	Target/Hexagon/HexagonEncodings.h \
	Target/Hexagon/HexagonGNUInfo.cpp \
	Target/Hexagon/HexagonGNUInfo.h \
	Target/Hexagon/HexagonGOT.cpp \
	Target/Hexagon/HexagonGOT.h \
	Target/Hexagon/HexagonGOTPLT.cpp \
	Target/Hexagon/HexagonGOTPLT.h \
	Target/Hexagon/Hexagon.h \
	Target/Hexagon/HexagonLDBackend.cpp \
	Target/Hexagon/HexagonLDBackend.h \
	Target/Hexagon/HexagonPLT.cpp \
	Target/Hexagon/HexagonPLT.h \
	Target/Hexagon/HexagonRelocationFunctions.h \
	Target/Hexagon/HexagonRelocator.cpp \
	Target/Hexagon/HexagonRelocator.h \
	Target/Hexagon/TargetInfo/HexagonTargetInfo.cpp \
	Target/Mips/MipsDiagnostic.cpp \
	Target/Mips/MipsELFDynamic.cpp \
	Target/Mips/MipsELFDynamic.h \
	Target/Mips/MipsEmulation.cpp \
	Target/Mips/MipsGNUInfo.cpp \
	Target/Mips/MipsGNUInfo.h \
	Target/Mips/MipsGOT.cpp \
	Target/Mips/MipsGOT.h \
	Target/Mips/MipsGOTPLT.cpp \
	Target/Mips/MipsGOTPLT.h \
	Target/Mips/Mips.h \
	Target/Mips/MipsLA25Stub.cpp \
	Target/Mips/MipsLA25Stub.h \
	Target/Mips/MipsLDBackend.cpp \
	Target/Mips/MipsLDBackend.h \
	Target/Mips/MipsPLT.cpp \
	Target/Mips/MipsPLT.h \
	Target/Mips/MipsRelocationFunctions.h \
	Target/Mips/MipsRelocator.cpp \
	Target/Mips/MipsRelocator.h \
	Target/Mips/TargetInfo/MipsTargetInfo.cpp \
	Target/X86/TargetInfo/X86TargetInfo.cpp \
	Target/X86/X86Diagnostic.cpp \
	Target/X86/X86ELFDynamic.cpp \
	Target/X86/X86ELFDynamic.h \
	Target/X86/X86Emulation.cpp \
	Target/X86/X86GNUInfo.h \
	Target/X86/X86GOT.cpp \
	Target/X86/X86GOT.h \
	Target/X86/X86GOTPLT.cpp \
	Target/X86/X86GOTPLT.h \
	Target/X86/X86.h \
	Target/X86/X86LDBackend.cpp \
	Target/X86/X86LDBackend.h \
	Target/X86/X86PLT.cpp \
	Target/X86/X86PLT.h \
	Target/X86/X86RelocationFunctions.h \
	Target/X86/X86Relocator.cpp \
	Target/X86/X86Relocator.h

ANDROID_CPPFLAGS=-fno-rtti -fno-exceptions -Waddress -Wchar-subscripts -Wcomment -Wformat -Wparentheses -Wreorder -Wreturn-type -Wsequence-point -Wstrict-aliasing -Wstrict-overflow=1 -Wswitch -Wtrigraphs -Wuninitialized -Wunknown-pragmas -Wunused-function -Wunused-label -Wunused-value -Wunused-variable -Wvolatile-register-var -Wsign-compare -Werror

MCLD_INCLUDES = \
	-I$(top_srcdir)/include \
	-I$(top_builddir)/include \
	-I$(abs_top_srcdir)/include/mcld/Script

if ENABLE_OPTIMIZED
MCLD_CPPFLAGS = -O2 $(LLVM_CPPFLAGS) $(ANDROID_CPPFLAGS)
else
MCLD_CPPFLAGS =  -g -DTOPDIR=\"$(abs_top_srcdir)\" -DMCLD_DEBUG $(LLVM_CPPFLAGS) -DGTEST_HAS_RTTI=0 $(ANDROID_CPPFLAGS)
endif

AM_CPPFLAGS = $(MCLD_CPPFLAGS) $(MCLD_INCLUDES)

lib_LIBRARIES= libmcld.a

libmcld_a_SOURCES = $(SOURCE)
