INCDIR=${abs_top_srcdir}/include/mcld
RELATIVE_INCDIR=../include/mcld
LIBDIR=${abs_top_srcdir}/lib
GENDIR=${abs_top_builddir}/include/mcld

AM_CXXFLAGS = \
	@NO_VARIADIC_MACROS@ \
	@NO_COVERED_SWITCH_DEFAULT@ \
	@NO_C99_EXTENSIONS@

BUILT_SOURCES = ScriptParser.cc
AM_YFLAGS = -d
AM_LFLAGS = -olex.yy.c

HEADER = ${RELATIVE_INCDIR}/AttributeOption.h \
	${RELATIVE_INCDIR}/BitcodeOption.h \
	${RELATIVE_INCDIR}/Environment.h \
	${RELATIVE_INCDIR}/GeneralOptions.h \
	${RELATIVE_INCDIR}/InputTree.h \
	${RELATIVE_INCDIR}/IRBuilder.h \
	${RELATIVE_INCDIR}/LinkerConfig.h \
	${RELATIVE_INCDIR}/Linker.h \
	${RELATIVE_INCDIR}/LinkerScript.h \
	${RELATIVE_INCDIR}/Module.h \
	${RELATIVE_INCDIR}/TargetOptions.h \
	${RELATIVE_INCDIR}/ADT/BinTree.h \
	${RELATIVE_INCDIR}/ADT/Flags.h \
	${RELATIVE_INCDIR}/ADT/HashBase.h \
	${RELATIVE_INCDIR}/ADT/HashBase.tcc \
	${RELATIVE_INCDIR}/ADT/HashEntryFactory.h \
	${RELATIVE_INCDIR}/ADT/HashEntry.h \
	${RELATIVE_INCDIR}/ADT/HashEntry.tcc \
	${RELATIVE_INCDIR}/ADT/HashIterator.h \
	${RELATIVE_INCDIR}/ADT/HashTable.h \
	${RELATIVE_INCDIR}/ADT/HashTable.tcc \
	${RELATIVE_INCDIR}/ADT/SizeTraits.h \
	${RELATIVE_INCDIR}/ADT/StringEntry.h \
	${RELATIVE_INCDIR}/ADT/StringEntry.tcc \
	${RELATIVE_INCDIR}/ADT/StringHash.h \
	${RELATIVE_INCDIR}/ADT/TreeAllocator.h \
	${RELATIVE_INCDIR}/ADT/TreeBase.h \
	${RELATIVE_INCDIR}/ADT/TypeTraits.h \
	${RELATIVE_INCDIR}/ADT/Uncopyable.h \
	${RELATIVE_INCDIR}/CodeGen/MCLinker.h \
	${RELATIVE_INCDIR}/CodeGen/TargetMachine.h \
	${RELATIVE_INCDIR}/Fragment/AlignFragment.h \
	${RELATIVE_INCDIR}/Fragment/FillFragment.h \
	${RELATIVE_INCDIR}/Fragment/Fragment.h \
	${RELATIVE_INCDIR}/Fragment/FragmentRef.h \
	${RELATIVE_INCDIR}/Fragment/NullFragment.h \
	${RELATIVE_INCDIR}/Fragment/RegionFragment.h \
	${RELATIVE_INCDIR}/Fragment/Relocation.h \
	${RELATIVE_INCDIR}/Fragment/Stub.h \
	${RELATIVE_INCDIR}/Fragment/TargetFragment.h \
	${RELATIVE_INCDIR}/LD/Archive.h \
	${RELATIVE_INCDIR}/LD/ArchiveReader.h \
	${RELATIVE_INCDIR}/LD/BinaryReader.h \
	${RELATIVE_INCDIR}/LD/BranchIslandFactory.h \
	${RELATIVE_INCDIR}/LD/BranchIsland.h \
	${RELATIVE_INCDIR}/LD/BSDArchiveReader.h \
	${RELATIVE_INCDIR}/LD/DiagAttribute.inc \
	${RELATIVE_INCDIR}/LD/DiagCommonKinds.inc \
	${RELATIVE_INCDIR}/LD/DiagGOTPLT.inc \
	${RELATIVE_INCDIR}/LD/DiagLayouts.inc \
	${RELATIVE_INCDIR}/LD/DiagLDScript.inc \
	${RELATIVE_INCDIR}/LD/DiagnosticEngine.h \
	${RELATIVE_INCDIR}/LD/Diagnostic.h \
	${RELATIVE_INCDIR}/LD/DiagnosticInfos.h \
	${RELATIVE_INCDIR}/LD/DiagnosticLineInfo.h \
	${RELATIVE_INCDIR}/LD/DiagnosticPrinter.h \
	${RELATIVE_INCDIR}/LD/DiagReaders.inc \
	${RELATIVE_INCDIR}/LD/DiagRelocations.inc \
	${RELATIVE_INCDIR}/LD/DiagSymbolResolutions.inc \
	${RELATIVE_INCDIR}/LD/DWARFLineInfo.h \
	${RELATIVE_INCDIR}/LD/DynObjFileFormat.h \
	${RELATIVE_INCDIR}/LD/DynObjReader.h \
	${RELATIVE_INCDIR}/LD/EhFrame.h \
	${RELATIVE_INCDIR}/LD/EhFrameHdr.h \
	${RELATIVE_INCDIR}/LD/EhFrameReader.h \
	${RELATIVE_INCDIR}/LD/ELFBinaryReader.h \
	${RELATIVE_INCDIR}/LD/ELFDynObjFileFormat.h \
	${RELATIVE_INCDIR}/LD/ELFDynObjReader.h \
	${RELATIVE_INCDIR}/LD/ELFExecFileFormat.h \
	${RELATIVE_INCDIR}/LD/ELFFileFormat.h \
	${RELATIVE_INCDIR}/LD/ELFObjectFileFormat.h \
	${RELATIVE_INCDIR}/LD/ELFObjectReader.h \
	${RELATIVE_INCDIR}/LD/ELFObjectWriter.h \
	${RELATIVE_INCDIR}/LD/ELFReader.h \
	${RELATIVE_INCDIR}/LD/ELFReaderIf.h \
	${RELATIVE_INCDIR}/LD/ELFSegmentFactory.h \
	${RELATIVE_INCDIR}/LD/ELFSegment.h \
	${RELATIVE_INCDIR}/LD/GarbageCollection.h \
	${RELATIVE_INCDIR}/LD/GNUArchiveReader.h \
	${RELATIVE_INCDIR}/LD/Group.h \
	${RELATIVE_INCDIR}/LD/GroupReader.h \
	${RELATIVE_INCDIR}/LD/LDContext.h \
	${RELATIVE_INCDIR}/LD/LDFileFormat.h \
	${RELATIVE_INCDIR}/LD/LDReader.h \
	${RELATIVE_INCDIR}/LD/LDSection.h \
	${RELATIVE_INCDIR}/LD/LDSymbol.h \
	${RELATIVE_INCDIR}/LD/MsgHandler.h \
	${RELATIVE_INCDIR}/LD/NamePool.h \
	${RELATIVE_INCDIR}/LD/ObjectReader.h \
	${RELATIVE_INCDIR}/LD/ObjectWriter.h \
	${RELATIVE_INCDIR}/LD/RelocationFactory.h \
	${RELATIVE_INCDIR}/LD/Relocator.h \
	${RELATIVE_INCDIR}/LD/RelocData.h \
	${RELATIVE_INCDIR}/LD/ResolveInfo.h \
	${RELATIVE_INCDIR}/LD/Resolver.h \
	${RELATIVE_INCDIR}/LD/SectionData.h \
	${RELATIVE_INCDIR}/LD/SectionSymbolSet.h \
	${RELATIVE_INCDIR}/LD/StaticResolver.h \
	${RELATIVE_INCDIR}/LD/StubFactory.h \
	${RELATIVE_INCDIR}/LD/TextDiagnosticPrinter.h \
	${RELATIVE_INCDIR}/MC/Attribute.h \
	${RELATIVE_INCDIR}/MC/AttributeSet.h \
	${RELATIVE_INCDIR}/MC/CommandAction.h \
	${RELATIVE_INCDIR}/MC/ContextFactory.h \
	${RELATIVE_INCDIR}/MC/FileAction.h \
	${RELATIVE_INCDIR}/MC/InputAction.h \
	${RELATIVE_INCDIR}/MC/InputBuilder.h \
	${RELATIVE_INCDIR}/MC/InputFactory.h \
	${RELATIVE_INCDIR}/MC/Input.h \
	${RELATIVE_INCDIR}/MC/MCLDDirectory.h \
	${RELATIVE_INCDIR}/MC/SearchDirs.h \
	${RELATIVE_INCDIR}/MC/SymbolCategory.h \
	${RELATIVE_INCDIR}/MC/ZOption.h \
	${RELATIVE_INCDIR}/Object/ObjectBuilder.h \
	${RELATIVE_INCDIR}/Object/ObjectLinker.h \
	${RELATIVE_INCDIR}/Object/SectionMap.h \
	${RELATIVE_INCDIR}/Script/AssertCmd.h \
	${RELATIVE_INCDIR}/Script/Assignment.h \
	${RELATIVE_INCDIR}/Script/BinaryOp.h \
	${RELATIVE_INCDIR}/Script/EntryCmd.h \
	${RELATIVE_INCDIR}/Script/ExprToken.h \
	${RELATIVE_INCDIR}/Script/FileToken.h \
	${RELATIVE_INCDIR}/Script/FlexLexer.h \
	${RELATIVE_INCDIR}/Script/GroupCmd.h \
	${RELATIVE_INCDIR}/Script/InputSectDesc.h \
	${RELATIVE_INCDIR}/Script/InputToken.h \
	${RELATIVE_INCDIR}/Script/NameSpec.h \
	${RELATIVE_INCDIR}/Script/NullaryOp.h \
	${RELATIVE_INCDIR}/Script/Operand.h \
	${RELATIVE_INCDIR}/Script/Operator.h \
	${RELATIVE_INCDIR}/Script/OutputArchCmd.h \
	${RELATIVE_INCDIR}/Script/OutputCmd.h \
	${RELATIVE_INCDIR}/Script/OutputFormatCmd.h \
	${RELATIVE_INCDIR}/Script/OutputSectDesc.h \
	${RELATIVE_INCDIR}/Script/RpnEvaluator.h \
	${RELATIVE_INCDIR}/Script/RpnExpr.h \
	${RELATIVE_INCDIR}/Script/ScriptCommand.h \
	${RELATIVE_INCDIR}/Script/ScriptFile.h \
	${RELATIVE_INCDIR}/Script/ScriptReader.h \
	${RELATIVE_INCDIR}/Script/ScriptScanner.h \
	${RELATIVE_INCDIR}/Script/SearchDirCmd.h \
	${RELATIVE_INCDIR}/Script/SectionsCmd.h \
	${RELATIVE_INCDIR}/Script/StringList.h \
	${RELATIVE_INCDIR}/Script/StrToken.h \
	${RELATIVE_INCDIR}/Script/TernaryOp.h \
	${RELATIVE_INCDIR}/Script/UnaryOp.h \
	${RELATIVE_INCDIR}/Script/WildcardPattern.h \
	${RELATIVE_INCDIR}/Support/Allocators.h \
	${RELATIVE_INCDIR}/Support/CommandLine.h \
	${RELATIVE_INCDIR}/Support/Directory.h \
	${RELATIVE_INCDIR}/Support/ELF.h \
	${RELATIVE_INCDIR}/Support/FileHandle.h \
	${RELATIVE_INCDIR}/Support/FileOutputBuffer.h \
	${RELATIVE_INCDIR}/Support/FileSystem.h \
	${RELATIVE_INCDIR}/Support/GCFactory.h \
	${RELATIVE_INCDIR}/Support/GCFactoryListTraits.h \
	${RELATIVE_INCDIR}/Support/LEB128.h \
	${RELATIVE_INCDIR}/Support/MemoryAreaFactory.h \
	${RELATIVE_INCDIR}/Support/MemoryArea.h \
	${RELATIVE_INCDIR}/Support/MemoryRegion.h \
	${RELATIVE_INCDIR}/Support/MsgHandling.h \
	${RELATIVE_INCDIR}/Support/PathCache.h \
	${RELATIVE_INCDIR}/Support/Path.h \
	${RELATIVE_INCDIR}/Support/raw_ostream.h \
	${RELATIVE_INCDIR}/Support/RealPath.h \
	${RELATIVE_INCDIR}/Support/SystemUtils.h \
	${RELATIVE_INCDIR}/Support/Target.h \
	${RELATIVE_INCDIR}/Support/TargetRegistry.h \
	${RELATIVE_INCDIR}/Support/TargetSelect.h \
	${RELATIVE_INCDIR}/Support/ToolOutputFile.h \
	${RELATIVE_INCDIR}/Support/UniqueGCFactory.h \
	${RELATIVE_INCDIR}/Target/DarwinLDBackend.h \
	${RELATIVE_INCDIR}/Target/ELFAttribute.h \
	${RELATIVE_INCDIR}/Target/ELFAttributeData.h \
	${RELATIVE_INCDIR}/Target/ELFAttributeValue.h \
	${RELATIVE_INCDIR}/Target/ELFDynamic.h \
	${RELATIVE_INCDIR}/Target/ELFDynamic.tcc \
	${RELATIVE_INCDIR}/Target/ELFEmulation.h \
	${RELATIVE_INCDIR}/Target/ELFMCLinker.h \
	${RELATIVE_INCDIR}/Target/GNUInfo.h \
	${RELATIVE_INCDIR}/Target/GNULDBackend.h \
	${RELATIVE_INCDIR}/Target/GOT.h \
	${RELATIVE_INCDIR}/Target/OutputRelocSection.h \
	${RELATIVE_INCDIR}/Target/PLT.h \
	${RELATIVE_INCDIR}/Target/KeyEntryMap.h \
	${RELATIVE_INCDIR}/Target/TargetLDBackend.h

SOURCE = ${LIBDIR}/ADT/StringEntry.cpp \
	${LIBDIR}/CodeGen/MCLDTargetMachine.cpp \
	${LIBDIR}/CodeGen/MCLinker.cpp \
	${LIBDIR}/Core/AttributeOption.cpp \
	${LIBDIR}/Core/BitcodeOption.cpp \
	${LIBDIR}/Core/Environment.cpp \
	${LIBDIR}/Core/GeneralOptions.cpp \
	${LIBDIR}/Core/InputTree.cpp \
	${LIBDIR}/Core/IRBuilder.cpp \
	${LIBDIR}/Core/LinkerConfig.cpp \
	${LIBDIR}/Core/Linker.cpp \
	${LIBDIR}/Core/LinkerScript.cpp \
	${LIBDIR}/Core/Module.cpp \
	${LIBDIR}/Core/TargetOptions.cpp \
	${LIBDIR}/Fragment/AlignFragment.cpp \
	${LIBDIR}/Fragment/FillFragment.cpp \
	${LIBDIR}/Fragment/Fragment.cpp \
	${LIBDIR}/Fragment/FragmentRef.cpp \
	${LIBDIR}/Fragment/NullFragment.cpp \
	${LIBDIR}/Fragment/RegionFragment.cpp \
	${LIBDIR}/Fragment/Relocation.cpp \
	${LIBDIR}/Fragment/Stub.cpp \
	${LIBDIR}/LD/Archive.cpp \
	${LIBDIR}/LD/ArchiveReader.cpp \
	${LIBDIR}/LD/BinaryReader.cpp \
	${LIBDIR}/LD/BranchIsland.cpp \
	${LIBDIR}/LD/BranchIslandFactory.cpp \
	${LIBDIR}/LD/BSDArchiveReader.cpp \
	${LIBDIR}/LD/Diagnostic.cpp \
	${LIBDIR}/LD/DiagnosticEngine.cpp \
	${LIBDIR}/LD/DiagnosticInfos.cpp \
	${LIBDIR}/LD/DiagnosticLineInfo.cpp \
	${LIBDIR}/LD/DiagnosticPrinter.cpp \
	${LIBDIR}/LD/DWARFLineInfo.cpp \
	${LIBDIR}/LD/DynObjReader.cpp \
	${LIBDIR}/LD/EhFrame.cpp \
	${LIBDIR}/LD/EhFrameHdr.cpp \
	${LIBDIR}/LD/EhFrameReader.cpp \
	${LIBDIR}/LD/ELFBinaryReader.cpp \
	${LIBDIR}/LD/ELFDynObjFileFormat.cpp \
	${LIBDIR}/LD/ELFDynObjReader.cpp \
	${LIBDIR}/LD/ELFExecFileFormat.cpp \
	${LIBDIR}/LD/ELFFileFormat.cpp \
	${LIBDIR}/LD/ELFObjectReader.cpp \
	${LIBDIR}/LD/ELFObjectWriter.cpp \
	${LIBDIR}/LD/ELFReader.cpp \
	${LIBDIR}/LD/ELFReaderIf.cpp \
	${LIBDIR}/LD/ELFSegment.cpp \
	${LIBDIR}/LD/ELFSegmentFactory.cpp \
	${LIBDIR}/LD/GarbageCollection.cpp \
	${LIBDIR}/LD/GNUArchiveReader.cpp \
	${LIBDIR}/LD/GroupReader.cpp \
	${LIBDIR}/LD/LDContext.cpp \
	${LIBDIR}/LD/LDFileFormat.cpp \
	${LIBDIR}/LD/LDReader.cpp \
	${LIBDIR}/LD/LDSection.cpp \
	${LIBDIR}/LD/LDSymbol.cpp \
	${LIBDIR}/LD/MsgHandler.cpp \
	${LIBDIR}/LD/NamePool.cpp \
	${LIBDIR}/LD/ObjectWriter.cpp \
	${LIBDIR}/LD/RelocationFactory.cpp \
	${LIBDIR}/LD/Relocator.cpp \
	${LIBDIR}/LD/RelocData.cpp \
	${LIBDIR}/LD/ResolveInfo.cpp \
	${LIBDIR}/LD/Resolver.cpp \
	${LIBDIR}/LD/SectionData.cpp \
	${LIBDIR}/LD/SectionSymbolSet.cpp \
	${LIBDIR}/LD/StaticResolver.cpp \
	${LIBDIR}/LD/StubFactory.cpp \
	${LIBDIR}/LD/TextDiagnosticPrinter.cpp \
	${LIBDIR}/MC/Attribute.cpp \
	${LIBDIR}/MC/AttributeSet.cpp \
	${LIBDIR}/MC/CommandAction.cpp \
	${LIBDIR}/MC/ContextFactory.cpp \
	${LIBDIR}/MC/FileAction.cpp \
	${LIBDIR}/MC/InputAction.cpp \
	${LIBDIR}/MC/InputBuilder.cpp \
	${LIBDIR}/MC/Input.cpp \
	${LIBDIR}/MC/InputFactory.cpp \
	${LIBDIR}/MC/MCLDDirectory.cpp \
	${LIBDIR}/MC/SearchDirs.cpp \
	${LIBDIR}/MC/SymbolCategory.cpp \
	${LIBDIR}/MC/ZOption.cpp \
	${LIBDIR}/Object/ObjectBuilder.cpp \
	${LIBDIR}/Object/ObjectLinker.cpp \
	${LIBDIR}/Object/SectionMap.cpp \
	${LIBDIR}/Script/AssertCmd.cpp \
	${LIBDIR}/Script/Assignment.cpp \
	${LIBDIR}/Script/BinaryOp.cpp \
	${LIBDIR}/Script/EntryCmd.cpp \
	${LIBDIR}/Script/FileToken.cpp \
	${LIBDIR}/Script/GroupCmd.cpp \
	${LIBDIR}/Script/InputSectDesc.cpp \
	${LIBDIR}/Script/InputToken.cpp \
	${LIBDIR}/Script/NameSpec.cpp \
	${LIBDIR}/Script/NullaryOp.cpp \
	${LIBDIR}/Script/Operand.cpp \
	${LIBDIR}/Script/Operator.cpp \
	${LIBDIR}/Script/OutputArchCmd.cpp \
	${LIBDIR}/Script/OutputCmd.cpp \
	${LIBDIR}/Script/OutputFormatCmd.cpp \
	${LIBDIR}/Script/OutputSectDesc.cpp \
	${LIBDIR}/Script/RpnEvaluator.cpp \
	${LIBDIR}/Script/RpnExpr.cpp \
	${LIBDIR}/Script/ScriptCommand.cpp \
	${LIBDIR}/Script/ScriptFile.cpp \
	${LIBDIR}/Script/ScriptParser.yy \
	${LIBDIR}/Script/ScriptReader.cpp \
	${LIBDIR}/Script/ScriptScanner.ll \
	${LIBDIR}/Script/SearchDirCmd.cpp \
	${LIBDIR}/Script/SectionsCmd.cpp \
	${LIBDIR}/Script/StringList.cpp \
	${LIBDIR}/Script/StrToken.cpp \
	${LIBDIR}/Script/TernaryOp.cpp \
	${LIBDIR}/Script/UnaryOp.cpp \
	${LIBDIR}/Script/WildcardPattern.cpp \
	${LIBDIR}/Support/CommandLine.cpp \
	${LIBDIR}/Support/Directory.cpp \
	${LIBDIR}/Support/FileHandle.cpp \
	${LIBDIR}/Support/FileOutputBuffer.cpp \
	${LIBDIR}/Support/FileSystem.cpp \
	${LIBDIR}/Support/LEB128.cpp \
	${LIBDIR}/Support/MemoryArea.cpp \
	${LIBDIR}/Support/MemoryAreaFactory.cpp \
	${LIBDIR}/Support/MsgHandling.cpp \
	${LIBDIR}/Support/Path.cpp \
	${LIBDIR}/Support/raw_ostream.cpp \
	${LIBDIR}/Support/RealPath.cpp \
	${LIBDIR}/Support/SystemUtils.cpp \
	${LIBDIR}/Support/Target.cpp \
	${LIBDIR}/Support/TargetRegistry.cpp \
	${LIBDIR}/Support/ToolOutputFile.cpp \
	${LIBDIR}/Support/Unix \
	${LIBDIR}/Support/Unix/FileSystem.inc \
	${LIBDIR}/Support/Unix/PathV3.inc \
	${LIBDIR}/Support/Unix/System.inc \
	${LIBDIR}/Support/Windows \
	${LIBDIR}/Support/Windows/FileSystem.inc \
	${LIBDIR}/Support/Windows/PathV3.inc \
	${LIBDIR}/Support/Windows/System.inc \
	${LIBDIR}/Target/ELFAttribute.cpp \
	${LIBDIR}/Target/ELFAttributeData.cpp \
	${LIBDIR}/Target/ELFAttributeValue.cpp \
	${LIBDIR}/Target/ELFDynamic.cpp \
	${LIBDIR}/Target/ELFEmulation.cpp \
	${LIBDIR}/Target/ELFMCLinker.cpp \
	${LIBDIR}/Target/GNUInfo.cpp \
	${LIBDIR}/Target/GNULDBackend.cpp \
	${LIBDIR}/Target/GOT.cpp \
	${LIBDIR}/Target/OutputRelocSection.cpp \
	${LIBDIR}/Target/PLT.cpp \
	${LIBDIR}/Target/TargetLDBackend.cpp \
	${LIBDIR}/Target/ARM/ARMDiagnostic.cpp \
	${LIBDIR}/Target/ARM/ARMELFAttributeData.cpp \
	${LIBDIR}/Target/ARM/ARMELFAttributeData.h \
	${LIBDIR}/Target/ARM/ARMELFDynamic.cpp \
	${LIBDIR}/Target/ARM/ARMELFDynamic.h \
	${LIBDIR}/Target/ARM/ARMELFMCLinker.cpp \
	${LIBDIR}/Target/ARM/ARMELFMCLinker.h \
	${LIBDIR}/Target/ARM/ARMEmulation.cpp \
	${LIBDIR}/Target/ARM/ARMGNUInfo.h \
	${LIBDIR}/Target/ARM/ARMGOT.cpp \
	${LIBDIR}/Target/ARM/ARMGOT.h \
	${LIBDIR}/Target/ARM/ARM.h \
	${LIBDIR}/Target/ARM/ARMLDBackend.cpp \
	${LIBDIR}/Target/ARM/ARMLDBackend.h \
	${LIBDIR}/Target/ARM/ARMMCLinker.cpp \
	${LIBDIR}/Target/ARM/ARMPLT.cpp \
	${LIBDIR}/Target/ARM/ARMPLT.h \
	${LIBDIR}/Target/ARM/ARMRelocationFunctions.h \
	${LIBDIR}/Target/ARM/ARMRelocator.cpp \
	${LIBDIR}/Target/ARM/ARMRelocator.h \
	${LIBDIR}/Target/ARM/ARMTargetMachine.cpp \
	${LIBDIR}/Target/ARM/ARMTargetMachine.h \
	${LIBDIR}/Target/ARM/ARMToARMStub.cpp \
	${LIBDIR}/Target/ARM/ARMToARMStub.h \
	${LIBDIR}/Target/ARM/ARMToTHMStub.cpp \
	${LIBDIR}/Target/ARM/ARMToTHMStub.h \
	${LIBDIR}/Target/ARM/TargetInfo/ARMTargetInfo.cpp \
	${LIBDIR}/Target/ARM/THMToARMStub.cpp \
	${LIBDIR}/Target/ARM/THMToARMStub.h \
	${LIBDIR}/Target/ARM/THMToTHMStub.cpp \
	${LIBDIR}/Target/ARM/THMToTHMStub.h \
	${LIBDIR}/Target/Hexagon/HexagonAbsoluteStub.cpp \
	${LIBDIR}/Target/Hexagon/HexagonAbsoluteStub.h \
	${LIBDIR}/Target/Hexagon/HexagonDiagnostic.cpp \
	${LIBDIR}/Target/Hexagon/HexagonELFDynamic.cpp \
	${LIBDIR}/Target/Hexagon/HexagonELFDynamic.h \
	${LIBDIR}/Target/Hexagon/HexagonELFMCLinker.cpp \
	${LIBDIR}/Target/Hexagon/HexagonELFMCLinker.h \
	${LIBDIR}/Target/Hexagon/HexagonEmulation.cpp \
	${LIBDIR}/Target/Hexagon/HexagonEncodings.h \
	${LIBDIR}/Target/Hexagon/HexagonGNUInfo.cpp \
	${LIBDIR}/Target/Hexagon/HexagonGNUInfo.h \
	${LIBDIR}/Target/Hexagon/HexagonGOT.cpp \
	${LIBDIR}/Target/Hexagon/HexagonGOT.h \
	${LIBDIR}/Target/Hexagon/HexagonGOTPLT.cpp \
	${LIBDIR}/Target/Hexagon/HexagonGOTPLT.h \
	${LIBDIR}/Target/Hexagon/Hexagon.h \
	${LIBDIR}/Target/Hexagon/HexagonLDBackend.cpp \
	${LIBDIR}/Target/Hexagon/HexagonLDBackend.h \
	${LIBDIR}/Target/Hexagon/HexagonMCLinker.cpp \
	${LIBDIR}/Target/Hexagon/HexagonPLT.cpp \
	${LIBDIR}/Target/Hexagon/HexagonPLT.h \
	${LIBDIR}/Target/Hexagon/HexagonRelocationFunctions.h \
	${LIBDIR}/Target/Hexagon/HexagonRelocator.cpp \
	${LIBDIR}/Target/Hexagon/HexagonRelocator.h \
	${LIBDIR}/Target/Hexagon/HexagonTargetMachine.cpp \
	${LIBDIR}/Target/Hexagon/HexagonTargetMachine.h \
	${LIBDIR}/Target/Hexagon/TargetInfo/HexagonTargetInfo.cpp \
	${LIBDIR}/Target/Mips/MipsDiagnostic.cpp \
	${LIBDIR}/Target/Mips/MipsELFDynamic.cpp \
	${LIBDIR}/Target/Mips/MipsELFDynamic.h \
	${LIBDIR}/Target/Mips/MipsELFMCLinker.cpp \
	${LIBDIR}/Target/Mips/MipsELFMCLinker.h \
	${LIBDIR}/Target/Mips/MipsEmulation.cpp \
	${LIBDIR}/Target/Mips/MipsGNUInfo.cpp \
	${LIBDIR}/Target/Mips/MipsGNUInfo.h \
	${LIBDIR}/Target/Mips/MipsGOT.cpp \
	${LIBDIR}/Target/Mips/MipsGOT.h \
	${LIBDIR}/Target/Mips/MipsGOTPLT.cpp \
	${LIBDIR}/Target/Mips/MipsGOTPLT.h \
	${LIBDIR}/Target/Mips/Mips.h \
	${LIBDIR}/Target/Mips/MipsLA25Stub.cpp \
	${LIBDIR}/Target/Mips/MipsLA25Stub.h \
	${LIBDIR}/Target/Mips/MipsLDBackend.cpp \
	${LIBDIR}/Target/Mips/MipsLDBackend.h \
	${LIBDIR}/Target/Mips/MipsMCLinker.cpp \
	${LIBDIR}/Target/Mips/MipsPLT.cpp \
	${LIBDIR}/Target/Mips/MipsPLT.h \
	${LIBDIR}/Target/Mips/MipsRelocationFunctions.h \
	${LIBDIR}/Target/Mips/MipsRelocator.cpp \
	${LIBDIR}/Target/Mips/MipsRelocator.h \
	${LIBDIR}/Target/Mips/MipsTargetMachine.cpp \
	${LIBDIR}/Target/Mips/MipsTargetMachine.h \
	${LIBDIR}/Target/Mips/TargetInfo/MipsTargetInfo.cpp \
	${LIBDIR}/Target/X86/TargetInfo/X86TargetInfo.cpp \
	${LIBDIR}/Target/X86/X86Diagnostic.cpp \
	${LIBDIR}/Target/X86/X86ELFDynamic.cpp \
	${LIBDIR}/Target/X86/X86ELFDynamic.h \
	${LIBDIR}/Target/X86/X86ELFMCLinker.cpp \
	${LIBDIR}/Target/X86/X86ELFMCLinker.h \
	${LIBDIR}/Target/X86/X86Emulation.cpp \
	${LIBDIR}/Target/X86/X86GNUInfo.h \
	${LIBDIR}/Target/X86/X86GOT.cpp \
	${LIBDIR}/Target/X86/X86GOT.h \
	${LIBDIR}/Target/X86/X86GOTPLT.cpp \
	${LIBDIR}/Target/X86/X86GOTPLT.h \
	${LIBDIR}/Target/X86/X86.h \
	${LIBDIR}/Target/X86/X86LDBackend.cpp \
	${LIBDIR}/Target/X86/X86LDBackend.h \
	${LIBDIR}/Target/X86/X86MCLinker.cpp \
	${LIBDIR}/Target/X86/X86PLT.cpp \
	${LIBDIR}/Target/X86/X86PLT.h \
	${LIBDIR}/Target/X86/X86RelocationFunctions.h \
	${LIBDIR}/Target/X86/X86Relocator.cpp \
	${LIBDIR}/Target/X86/X86Relocator.h \
	${LIBDIR}/Target/X86/X86TargetMachine.cpp \
	${LIBDIR}/Target/X86/X86TargetMachine.h

ANDROID_CPPFLAGS=-fno-rtti -fno-exceptions -Waddress -Wchar-subscripts -Wcomment -Wformat -Wparentheses -Wreorder -Wreturn-type -Wsequence-point -Wstrict-aliasing -Wstrict-overflow=1 -Wswitch -Wtrigraphs -Wuninitialized -Wunknown-pragmas -Wunused-function -Wunused-label -Wunused-value -Wunused-variable -Wvolatile-register-var

if ENABLE_WERROR
ANDROID_CPPFLAGS+=-Werror
endif

MCLD_INCLUDES = \
	-I${top_srcdir}/include \
	-I${top_builddir}/include \
	-I${INCDIR}/Script

MCLD_CPPFLAGS = -O2 ${LLVM_CPPFLAGS} ${ANDROID_CPPFLAGS}

AM_CPPFLAGS = ${MCLD_CPPFLAGS} ${MCLD_INCLUDES}

lib_LIBRARIES= libmcld.a

libmcld_a_SOURCES = ${SOURCE}

nobase_include_HEADERS = ${HEADER}

