INCDIR=${abs_top_srcdir}/include/mcld
LIBDIR=${abs_top_srcdir}/lib
GENDIR=${abs_top_builddir}/include/mcld

AM_CXXFLAGS = \
	@NO_VARIADIC_MACROS@ \
	@NO_COVERED_SWITCH_DEFAULT@ \
	@NO_C99_EXTENSIONS@

BUILT_SOURCES = ScriptParser.cc
AM_YFLAGS = -d
AM_LFLAGS = -olex.yy.c

SOURCE = ${LIBDIR}/ADT/StringEntry.cpp \
	${LIBDIR}/CodeGen/MCLDTargetMachine.cpp \
	${LIBDIR}/CodeGen/MCLinker.cpp \
	${LIBDIR}/Core/AttributeOption.cpp \
	${LIBDIR}/Core/BitcodeOption.cpp \
	${LIBDIR}/Core/Environment.cpp \
	${LIBDIR}/Core/GeneralOptions.cpp \
	${LIBDIR}/Core/InputTree.cpp \
	${LIBDIR}/Core/IRBuilder.cpp \
	${LIBDIR}/Core/LinkerConfig.cpp \
	${LIBDIR}/Core/Linker.cpp \
	${LIBDIR}/Core/LinkerScript.cpp \
	${LIBDIR}/Core/Module.cpp \
	${LIBDIR}/Core/TargetOptions.cpp \
	${LIBDIR}/Fragment/AlignFragment.cpp \
	${LIBDIR}/Fragment/FillFragment.cpp \
	${LIBDIR}/Fragment/Fragment.cpp \
	${LIBDIR}/Fragment/FragmentRef.cpp \
	${LIBDIR}/Fragment/NullFragment.cpp \
	${LIBDIR}/Fragment/RegionFragment.cpp \
	${LIBDIR}/Fragment/Relocation.cpp \
	${LIBDIR}/Fragment/Stub.cpp \
	${LIBDIR}/LD/Archive.cpp \
	${LIBDIR}/LD/ArchiveReader.cpp \
	${LIBDIR}/LD/BinaryReader.cpp \
	${LIBDIR}/LD/BranchIsland.cpp \
	${LIBDIR}/LD/BranchIslandFactory.cpp \
	${LIBDIR}/LD/BSDArchiveReader.cpp \
	${LIBDIR}/LD/Diagnostic.cpp \
	${LIBDIR}/LD/DiagnosticEngine.cpp \
	${LIBDIR}/LD/DiagnosticInfos.cpp \
	${LIBDIR}/LD/DiagnosticLineInfo.cpp \
	${LIBDIR}/LD/DiagnosticPrinter.cpp \
	${LIBDIR}/LD/DWARFLineInfo.cpp \
	${LIBDIR}/LD/DynObjReader.cpp \
	${LIBDIR}/LD/EhFrame.cpp \
	${LIBDIR}/LD/EhFrameHdr.cpp \
	${LIBDIR}/LD/EhFrameReader.cpp \
	${LIBDIR}/LD/ELFBinaryReader.cpp \
	${LIBDIR}/LD/ELFDynObjFileFormat.cpp \
	${LIBDIR}/LD/ELFDynObjReader.cpp \
	${LIBDIR}/LD/ELFExecFileFormat.cpp \
	${LIBDIR}/LD/ELFFileFormat.cpp \
	${LIBDIR}/LD/ELFObjectReader.cpp \
	${LIBDIR}/LD/ELFObjectWriter.cpp \
	${LIBDIR}/LD/ELFReader.cpp \
	${LIBDIR}/LD/ELFReaderIf.cpp \
	${LIBDIR}/LD/ELFSegment.cpp \
	${LIBDIR}/LD/ELFSegmentFactory.cpp \
	${LIBDIR}/LD/GarbageCollection.cpp \
	${LIBDIR}/LD/GNUArchiveReader.cpp \
	${LIBDIR}/LD/GroupReader.cpp \
	${LIBDIR}/LD/LDContext.cpp \
	${LIBDIR}/LD/LDFileFormat.cpp \
	${LIBDIR}/LD/LDReader.cpp \
	${LIBDIR}/LD/LDSection.cpp \
	${LIBDIR}/LD/LDSymbol.cpp \
	${LIBDIR}/LD/MsgHandler.cpp \
	${LIBDIR}/LD/NamePool.cpp \
	${LIBDIR}/LD/ObjectWriter.cpp \
	${LIBDIR}/LD/RelocationFactory.cpp \
	${LIBDIR}/LD/Relocator.cpp \
	${LIBDIR}/LD/RelocData.cpp \
	${LIBDIR}/LD/ResolveInfo.cpp \
	${LIBDIR}/LD/Resolver.cpp \
	${LIBDIR}/LD/SectionData.cpp \
	${LIBDIR}/LD/SectionSymbolSet.cpp \
	${LIBDIR}/LD/StaticResolver.cpp \
	${LIBDIR}/LD/StubFactory.cpp \
	${LIBDIR}/LD/TextDiagnosticPrinter.cpp \
	${LIBDIR}/MC/Attribute.cpp \
	${LIBDIR}/MC/AttributeSet.cpp \
	${LIBDIR}/MC/CommandAction.cpp \
	${LIBDIR}/MC/ContextFactory.cpp \
	${LIBDIR}/MC/FileAction.cpp \
	${LIBDIR}/MC/InputAction.cpp \
	${LIBDIR}/MC/InputBuilder.cpp \
	${LIBDIR}/MC/Input.cpp \
	${LIBDIR}/MC/InputFactory.cpp \
	${LIBDIR}/MC/MCLDDirectory.cpp \
	${LIBDIR}/MC/SearchDirs.cpp \
	${LIBDIR}/MC/SymbolCategory.cpp \
	${LIBDIR}/MC/ZOption.cpp \
	${LIBDIR}/Object/ObjectBuilder.cpp \
	${LIBDIR}/Object/ObjectLinker.cpp \
	${LIBDIR}/Object/SectionMap.cpp \
	${LIBDIR}/Script/AssertCmd.cpp \
	${LIBDIR}/Script/Assignment.cpp \
	${LIBDIR}/Script/BinaryOp.cpp \
	${LIBDIR}/Script/EntryCmd.cpp \
	${LIBDIR}/Script/FileToken.cpp \
	${LIBDIR}/Script/GroupCmd.cpp \
	${LIBDIR}/Script/InputSectDesc.cpp \
	${LIBDIR}/Script/InputToken.cpp \
	${LIBDIR}/Script/NameSpec.cpp \
	${LIBDIR}/Script/NullaryOp.cpp \
	${LIBDIR}/Script/Operand.cpp \
	${LIBDIR}/Script/Operator.cpp \
	${LIBDIR}/Script/OutputArchCmd.cpp \
	${LIBDIR}/Script/OutputCmd.cpp \
	${LIBDIR}/Script/OutputFormatCmd.cpp \
	${LIBDIR}/Script/OutputSectDesc.cpp \
	${LIBDIR}/Script/RpnEvaluator.cpp \
	${LIBDIR}/Script/RpnExpr.cpp \
	${LIBDIR}/Script/ScriptCommand.cpp \
	${LIBDIR}/Script/ScriptFile.cpp \
	${LIBDIR}/Script/ScriptParser.yy \
	${LIBDIR}/Script/ScriptReader.cpp \
	${LIBDIR}/Script/ScriptScanner.ll \
	${LIBDIR}/Script/SearchDirCmd.cpp \
	${LIBDIR}/Script/SectionsCmd.cpp \
	${LIBDIR}/Script/StringList.cpp \
	${LIBDIR}/Script/StrToken.cpp \
	${LIBDIR}/Script/TernaryOp.cpp \
	${LIBDIR}/Script/UnaryOp.cpp \
	${LIBDIR}/Script/WildcardPattern.cpp \
	${LIBDIR}/Support/CommandLine.cpp \
	${LIBDIR}/Support/Directory.cpp \
	${LIBDIR}/Support/FileHandle.cpp \
	${LIBDIR}/Support/FileOutputBuffer.cpp \
	${LIBDIR}/Support/FileSystem.cpp \
	${LIBDIR}/Support/LEB128.cpp \
	${LIBDIR}/Support/MemoryArea.cpp \
	${LIBDIR}/Support/MemoryAreaFactory.cpp \
	${LIBDIR}/Support/MsgHandling.cpp \
	${LIBDIR}/Support/Path.cpp \
	${LIBDIR}/Support/raw_ostream.cpp \
	${LIBDIR}/Support/RealPath.cpp \
	${LIBDIR}/Support/SystemUtils.cpp \
	${LIBDIR}/Support/Target.cpp \
	${LIBDIR}/Support/TargetRegistry.cpp \
	${LIBDIR}/Support/ToolOutputFile.cpp \
	${LIBDIR}/Support/Unix \
	${LIBDIR}/Support/Unix/FileSystem.inc \
	${LIBDIR}/Support/Unix/PathV3.inc \
	${LIBDIR}/Support/Unix/System.inc \
	${LIBDIR}/Support/Windows \
	${LIBDIR}/Support/Windows/FileSystem.inc \
	${LIBDIR}/Support/Windows/PathV3.inc \
	${LIBDIR}/Support/Windows/System.inc \
	${LIBDIR}/Target/ELFAttribute.cpp \
	${LIBDIR}/Target/ELFAttributeData.cpp \
	${LIBDIR}/Target/ELFAttributeValue.cpp \
	${LIBDIR}/Target/ELFDynamic.cpp \
	${LIBDIR}/Target/ELFEmulation.cpp \
	${LIBDIR}/Target/ELFMCLinker.cpp \
	${LIBDIR}/Target/GNUInfo.cpp \
	${LIBDIR}/Target/GNULDBackend.cpp \
	${LIBDIR}/Target/GOT.cpp \
	${LIBDIR}/Target/OutputRelocSection.cpp \
	${LIBDIR}/Target/PLT.cpp \
	${LIBDIR}/Target/TargetLDBackend.cpp \
	${LIBDIR}/Target/ARM/ARMDiagnostic.cpp \
	${LIBDIR}/Target/ARM/ARMELFAttributeData.cpp \
	${LIBDIR}/Target/ARM/ARMELFAttributeData.h \
	${LIBDIR}/Target/ARM/ARMELFDynamic.cpp \
	${LIBDIR}/Target/ARM/ARMELFDynamic.h \
	${LIBDIR}/Target/ARM/ARMELFMCLinker.cpp \
	${LIBDIR}/Target/ARM/ARMELFMCLinker.h \
	${LIBDIR}/Target/ARM/ARMEmulation.cpp \
	${LIBDIR}/Target/ARM/ARMGNUInfo.h \
	${LIBDIR}/Target/ARM/ARMGOT.cpp \
	${LIBDIR}/Target/ARM/ARMGOT.h \
	${LIBDIR}/Target/ARM/ARM.h \
	${LIBDIR}/Target/ARM/ARMLDBackend.cpp \
	${LIBDIR}/Target/ARM/ARMLDBackend.h \
	${LIBDIR}/Target/ARM/ARMMCLinker.cpp \
	${LIBDIR}/Target/ARM/ARMPLT.cpp \
	${LIBDIR}/Target/ARM/ARMPLT.h \
	${LIBDIR}/Target/ARM/ARMRelocationFunctions.h \
	${LIBDIR}/Target/ARM/ARMRelocator.cpp \
	${LIBDIR}/Target/ARM/ARMRelocator.h \
	${LIBDIR}/Target/ARM/ARMTargetMachine.cpp \
	${LIBDIR}/Target/ARM/ARMTargetMachine.h \
	${LIBDIR}/Target/ARM/ARMToARMStub.cpp \
	${LIBDIR}/Target/ARM/ARMToARMStub.h \
	${LIBDIR}/Target/ARM/ARMToTHMStub.cpp \
	${LIBDIR}/Target/ARM/ARMToTHMStub.h \
	${LIBDIR}/Target/ARM/TargetInfo/ARMTargetInfo.cpp \
	${LIBDIR}/Target/ARM/THMToARMStub.cpp \
	${LIBDIR}/Target/ARM/THMToARMStub.h \
	${LIBDIR}/Target/ARM/THMToTHMStub.cpp \
	${LIBDIR}/Target/ARM/THMToTHMStub.h \
	${LIBDIR}/Target/Hexagon/HexagonAbsoluteStub.cpp \
	${LIBDIR}/Target/Hexagon/HexagonAbsoluteStub.h \
	${LIBDIR}/Target/Hexagon/HexagonDiagnostic.cpp \
	${LIBDIR}/Target/Hexagon/HexagonELFDynamic.cpp \
	${LIBDIR}/Target/Hexagon/HexagonELFDynamic.h \
	${LIBDIR}/Target/Hexagon/HexagonELFMCLinker.cpp \
	${LIBDIR}/Target/Hexagon/HexagonELFMCLinker.h \
	${LIBDIR}/Target/Hexagon/HexagonEmulation.cpp \
	${LIBDIR}/Target/Hexagon/HexagonEncodings.h \
	${LIBDIR}/Target/Hexagon/HexagonGNUInfo.cpp \
	${LIBDIR}/Target/Hexagon/HexagonGNUInfo.h \
	${LIBDIR}/Target/Hexagon/HexagonGOT.cpp \
	${LIBDIR}/Target/Hexagon/HexagonGOT.h \
	${LIBDIR}/Target/Hexagon/HexagonGOTPLT.cpp \
	${LIBDIR}/Target/Hexagon/HexagonGOTPLT.h \
	${LIBDIR}/Target/Hexagon/Hexagon.h \
	${LIBDIR}/Target/Hexagon/HexagonLDBackend.cpp \
	${LIBDIR}/Target/Hexagon/HexagonLDBackend.h \
	${LIBDIR}/Target/Hexagon/HexagonMCLinker.cpp \
	${LIBDIR}/Target/Hexagon/HexagonPLT.cpp \
	${LIBDIR}/Target/Hexagon/HexagonPLT.h \
	${LIBDIR}/Target/Hexagon/HexagonRelocationFunctions.h \
	${LIBDIR}/Target/Hexagon/HexagonRelocator.cpp \
	${LIBDIR}/Target/Hexagon/HexagonRelocator.h \
	${LIBDIR}/Target/Hexagon/HexagonTargetMachine.cpp \
	${LIBDIR}/Target/Hexagon/HexagonTargetMachine.h \
	${LIBDIR}/Target/Hexagon/TargetInfo/HexagonTargetInfo.cpp \
	${LIBDIR}/Target/Mips/MipsDiagnostic.cpp \
	${LIBDIR}/Target/Mips/MipsELFDynamic.cpp \
	${LIBDIR}/Target/Mips/MipsELFDynamic.h \
	${LIBDIR}/Target/Mips/MipsELFMCLinker.cpp \
	${LIBDIR}/Target/Mips/MipsELFMCLinker.h \
	${LIBDIR}/Target/Mips/MipsEmulation.cpp \
	${LIBDIR}/Target/Mips/MipsGNUInfo.cpp \
	${LIBDIR}/Target/Mips/MipsGNUInfo.h \
	${LIBDIR}/Target/Mips/MipsGOT.cpp \
	${LIBDIR}/Target/Mips/MipsGOT.h \
	${LIBDIR}/Target/Mips/MipsGOTPLT.cpp \
	${LIBDIR}/Target/Mips/MipsGOTPLT.h \
	${LIBDIR}/Target/Mips/Mips.h \
	${LIBDIR}/Target/Mips/MipsLA25Stub.cpp \
	${LIBDIR}/Target/Mips/MipsLA25Stub.h \
	${LIBDIR}/Target/Mips/MipsLDBackend.cpp \
	${LIBDIR}/Target/Mips/MipsLDBackend.h \
	${LIBDIR}/Target/Mips/MipsMCLinker.cpp \
	${LIBDIR}/Target/Mips/MipsPLT.cpp \
	${LIBDIR}/Target/Mips/MipsPLT.h \
	${LIBDIR}/Target/Mips/MipsRelocationFunctions.h \
	${LIBDIR}/Target/Mips/MipsRelocator.cpp \
	${LIBDIR}/Target/Mips/MipsRelocator.h \
	${LIBDIR}/Target/Mips/MipsTargetMachine.cpp \
	${LIBDIR}/Target/Mips/MipsTargetMachine.h \
	${LIBDIR}/Target/Mips/TargetInfo/MipsTargetInfo.cpp \
	${LIBDIR}/Target/X86/TargetInfo/X86TargetInfo.cpp \
	${LIBDIR}/Target/X86/X86Diagnostic.cpp \
	${LIBDIR}/Target/X86/X86ELFDynamic.cpp \
	${LIBDIR}/Target/X86/X86ELFDynamic.h \
	${LIBDIR}/Target/X86/X86ELFMCLinker.cpp \
	${LIBDIR}/Target/X86/X86ELFMCLinker.h \
	${LIBDIR}/Target/X86/X86Emulation.cpp \
	${LIBDIR}/Target/X86/X86GNUInfo.h \
	${LIBDIR}/Target/X86/X86GOT.cpp \
	${LIBDIR}/Target/X86/X86GOT.h \
	${LIBDIR}/Target/X86/X86GOTPLT.cpp \
	${LIBDIR}/Target/X86/X86GOTPLT.h \
	${LIBDIR}/Target/X86/X86.h \
	${LIBDIR}/Target/X86/X86LDBackend.cpp \
	${LIBDIR}/Target/X86/X86LDBackend.h \
	${LIBDIR}/Target/X86/X86MCLinker.cpp \
	${LIBDIR}/Target/X86/X86PLT.cpp \
	${LIBDIR}/Target/X86/X86PLT.h \
	${LIBDIR}/Target/X86/X86RelocationFunctions.h \
	${LIBDIR}/Target/X86/X86Relocator.cpp \
	${LIBDIR}/Target/X86/X86Relocator.h \
	${LIBDIR}/Target/X86/X86TargetMachine.cpp \
	${LIBDIR}/Target/X86/X86TargetMachine.h

ANDROID_CPPFLAGS=-fno-rtti -fno-exceptions -Waddress -Wchar-subscripts -Wcomment -Wformat -Wparentheses -Wreorder -Wreturn-type -Wsequence-point -Wstrict-aliasing -Wstrict-overflow=1 -Wswitch -Wtrigraphs -Wuninitialized -Wunknown-pragmas -Wunused-function -Wunused-label -Wunused-value -Wunused-variable -Wvolatile-register-var

if ENABLE_WERROR
ANDROID_CPPFLAGS+=-Werror
endif

MCLD_INCLUDES = \
	-I${top_srcdir}/include \
	-I${top_builddir}/include \
	-I${INCDIR}/Script

MCLD_CPPFLAGS = -O2 ${LLVM_CPPFLAGS} ${ANDROID_CPPFLAGS}

AM_CPPFLAGS = ${MCLD_CPPFLAGS} ${MCLD_INCLUDES}

lib_LIBRARIES= libmcld.a

libmcld_a_SOURCES = ${SOURCE}
