add_mcld_library(MCLDLD
  Archive.cpp
  ArchiveReader.cpp
  BinaryReader.cpp
  BranchIsland.cpp
  BranchIslandFactory.cpp
  BSDArchiveReader.cpp
  Diagnostic.cpp
  DiagnosticEngine.cpp
  DiagnosticInfos.cpp
  DiagnosticLineInfo.cpp
  DiagnosticPrinter.cpp
  DWARFLineInfo.cpp
  DynObjReader.cpp
  EhFrame.cpp
  EhFrameHdr.cpp
  EhFrameReader.cpp
  ELFBinaryReader.cpp
  ELFDynObjFileFormat.cpp
  ELFDynObjReader.cpp
  ELFExecFileFormat.cpp
  ELFFileFormat.cpp
  ELFObjectReader.cpp
  ELFObjectWriter.cpp
  ELFReader.cpp
  ELFReaderIf.cpp
  ELFSegment.cpp
  ELFSegmentFactory.cpp
  GarbageCollection.cpp
  GNUArchiveReader.cpp
  GroupReader.cpp
  LDContext.cpp
  LDFileFormat.cpp
  LDReader.cpp
  LDSection.cpp
  LDSymbol.cpp
  MsgHandler.cpp
  NamePool.cpp
  ObjectWriter.cpp
  RelocationFactory.cpp
  Relocator.cpp
  RelocData.cpp
  ResolveInfo.cpp
  Resolver.cpp
  SectionData.cpp
  SectionSymbolSet.cpp
  StaticResolver.cpp
  StubFactory.cpp
  TextDiagnosticPrinter.cpp
  )

target_link_libraries(MCLDLD
  MCLDFragment
  )
